criamos uma proteção para a adm

--- a/src/views/adm.ejs
+++ b/src/views/adm.ejs
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarefas</title>
+    
 </head>
 <body>
 
+        <h1>Você sabia que o pedro é gay?<%=user.name%></h1>
+       
 </body>
 </html>
