página de listar users

--- a/src/views/adm.ejs
+++ b/src/views/adm.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/9e33e7010c.js" crossorigin="anonymous"></script>
-    <title>Tarefas</title>
+    <title>Tarefas2</title>
     <style>
         body {
   margin: 0;
@@ -27,42 +27,48 @@
 
  .Divisao{
     width:200px;
-    height: 597px;
+    height: 640px;
     padding-left: 10px;
     border: 5px solid #940894;
     background-color: #f8c2f8;
    } 
    .Botao{
+    
    position: relative ;
    left: 95%;
    
    } 
+   .Header{
+    width: 100%;
+    height: 100px;
+    border: 5px solid #4e264e;
+   }
+   .Butao{
+    position: relative;
+    top: 20px;
+   }
 
 
 
     </style>
 </head>
 <body>
-<form class="Formulario">
     <div class="Header">
         <h1 class="User"><%=user.name%>
         <i class="fa-regular fa-circle-user"></i>
         </h1>
         <h1 class="Titulo">Controle de tarefas</h1>
-       <button class="Botao">
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1">Sair</a>
-    </button>
+       
+        <form action="/usuario/logout" method="post" class="Butao">
+        <button class="Botao" type="submit">Sair</button>
+        </form>
 </div>
-</form>
-<form>
 <div class="Divisao">
   <h1 class="Cadastrar"></h1>
   <a href="#">Cadastrar</a>
   <h1 class="Listar"></h1>
-  <a href="#">Listar</a>
-
+  <a href="/adm/users">Listar</a>
 </div>
- </form>
  
 </body>
 </html>
